feat(chat): add structured inputs and session memory for booking flow
Enable Agno session persistence with SqliteDb for conversation context.
Add structured input components in chat widget: multi-select services,
datetime picker, and contact form. Backend returns input_type and
input_config to trigger appropriate UI. Invalidate agent cache on
business config updates to ensure fresh data.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pyyaml>=6.0.0",
     "python-dotenv>=1.0.0",
     "python-multipart>=0.0.9",
+    "sqlalchemy>=2.0.44",
 ]
 
 [tool.uv]
